Add blog posts, district resources, fall rally page

--- a/website/events/upcoming/index.html
+++ b/website/events/upcoming/index.html
@@ -17,12 +17,12 @@ class: upcoming-events
 	<dd>
 		<h3><a href="/events/kfamily-picnic/flyer.pdf">Event Flyer (PDF)</a> | <a href="/events/kfamily-picnic">Event Page</a></h3>
         <p>On July 19, 2015, members from all branches of the K-Family alike are invited to come together in Toms River, NJ for a fun day at the beach filled with food and service projects! This is a great opportunity to connect with other members of the K-Family near you. Click the "event page" link above for more information.</p>
-	</dd>
-	<dt><h2>Teen Hunger Institute | 7.29.2015</h2></dt>
-	<dd>
-		<h3><a href="/downloads/upcoming-events/Teen Hunger Institute 2015.pdf">Event Flyer (PDF)</a></h3>
-        <p>The Community FoodBank of New Jersey is hosting a one-day event filled with guest presentations and workshops about hunger, the focus of our 2015-2016 NJ District Project!</p>
 	</dd>-->
+	<dt><h2>5th Annual Teen Hunger Summit | 11.10.2015</h2></dt>
+	<dd>
+		<h3><a href="/downloads/upcoming-events/Teen Hunger Summit 2015.doc">Event Flyer (DOC)</a></h3>
+        <p>The Community FoodBank of New Jersey and Seton Hall Prep are hosting an event filled with discussions and workshops about poverty, advocacy, and hunger, the focus of our 2015-2016 NJ District Project!</p>
+	</dd>
 	<dt><h2>Key Leader | 12.4.2015</h2></dt>
 	<dd>
 		<h3><a href="/events/key-leader/flyer.pdf">Interactive Event Flyer</a></h3>
