--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -31,6 +31,17 @@ class: district-resources
                 <h3><a href="/downloads/district-resources/for-everyone/Scholarships Packet.pdf">Scholarships Packet (PDF)</a></h3>
                 <p>Are you a graduating senior this year? If so, check out this scholarships packet compiled by our very own <a href="/board/farwa.html">Farwa Shakeel</a>!</p>
             </li>-->
+
+            <li>
+                <h3><a href="/downloads/district-resources/for-everyone/NJ District Bylaws.docx">NJ District Bylaws (DOCX)</a></h3>
+                <p>Here are the New Jersey District of Key Club Bylaws.</p>
+            </li>
+
+            <li>
+                <h3><a href="/downloads/district-resources/for-everyone/2015 August Board Meeting Summary.pdf">2015 August Board Summary</a></h3>
+                <p>Here is a summary of what the District Board discussed at the August Board Meeting in August 2015, written by Secretary Farwa Shakeel.</p>
+            </li>
+
             <li>
                 <h3><a href="https://goo.gl/T4bJ12">District Feedback and Improvement Survey (Google Survey)</a></h3>
                 <p>Do you want to provide feedback and help improve our district, but you don't know how? Fear no longer! Fill out this survey here to let us know how we're doing.</p>
@@ -207,24 +218,25 @@ class: district-resources
     <dt><h1>For Club Secretaries</h1></dt>
     <dd>
         <ul>
-            <li>
-                <h3><a href="/downloads/district-resources/for-club-secretaries/CMRF Instructions for Club Secretaries.pdf">CMRF Instructions for Club Secretaries (PDF)</a></h3>
-                <p>Need help filling out CMRFs? Check out this document compiled by Immediate Past District Secretary Jacqueline Dragon!</p>
-            </li>
 
             <li>
-                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Officer Roster Form.pdf">Club Officer Roster Form (PDF)</a></h3>
-                <p>Clubs are required to fill out this form and send it to their respective LTGs or District Secretary Sarah Park ASAP.</p>
-            </li>
-
-
-            <li>
-                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Monthly Report Form.pdf">Club Monthly Report Form (PDF)</a></h3>
+                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Monthly Report Form.doc">Club Monthly Report Form (DOC)</a></h3>
                 <p>Club secretaries are required to fill out this form by the deadline set by their respective divisions' Lieutenant Governors.</p>
             </li>
+
             <li>
-                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Monthly Report Form.rtf">Club Monthly Report Form (RTF)</a></h3>
-                <p>Club secretaries are required to fill out this form by the deadline set by their respective divisions' Lieutenant Governors. This is a RTF version and is to be used only as backup in case there are issues with the PDF.</p>
+                <h3><a href="/downloads/district-resources/for-club-secretaries/CMRF Instructions 2015-16.pdf">CMRF Instructions for Club Secretaries (PDF)</a></h3>
+                <p>Need help filling out CMRFs? Check out this document compiled by District Secretary Farwa Shakeel!</p>
+            </li>
+
+            <li>
+                <h3><a href="/downloads/district-resources/for-club-secretaries/Minutes Template.doc">Minutes Template (DOC)</a></h3>
+                <p>Here is a minutes template for your board and officer meetings!</p>
+            </li>
+
+            <li>
+                <h3><a href="/downloads/district-resources/for-club-secretaries/Club Officer Roster.doc">Club Officer Roster (DOC)</a></h3>
+                <p>Clubs are required to fill out this form and send it to their respective LTGs or District Secretary Farwa Shakeel ASAP.</p>
             </li>
 
             <li>
@@ -239,37 +251,37 @@ class: district-resources
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/November 2014 NJ District Secretary Update for Club Secretaries.pdf">November 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/farwa.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/October 2014 NJ District Secretary Update for Club Secretaries.pdf">October 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/farwa.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/September 2014 NJ District Secretary Update for Club Secretaries.pdf">September 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/farwa.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/August 2014 NJ District Secretary Update for Club Secretaries.pdf">August 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/farwa.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/July 2014 NJ District Secretary Update for Club Secretaries.pdf">July 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/farwa.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/May 2014 NJ District Secretary Update for Club Secretaries.pdf">May 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/farwa.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-club-secretaries/April 2014 NJ District Secretary Update for Club Secretaries.pdf">April 2014 NJ District Secretary Update for Club Secretaries (PDF)</a></h3>
-                <p>Your monthly update made possible by our <a href="/board/sarahp.html">District Secretary Jacqueline Dragon</a>!</p>
+                <p>Your monthly update made possible by our <a href="/board/farwa.html">District Secretary Jacqueline Dragon</a>!</p>
             </li>-->
         </ul>
     </dd>
@@ -295,6 +307,10 @@ class: district-resources
 
             <li>
                 <h3><a href="/downloads/district-resources/district-mailings/2015 March-DCON District Mailing.zip">2015 March-DCON District Mailing (ZIP)</a></h3>
+            </li>
+
+            <li>
+                <h3><a href="/downloads/district-resources/district-mailings/2015 Back-to-School District Mailing.zip">2015 Back-to-School District Mailing (ZIP)</a></h3>
             </li>
         </ul>
     </dd>
