--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -33,6 +33,11 @@ class: district-resources
             </li>-->
 
             <li>
+                <h3><a href="//issuu.com/njkeyclub/docs/15-16_district_handbook_3e4e437c5fd9ad">NJ District Handbook (Issuu)</a></h3>
+                <p>Here is the official handbook to the New Jersey District of Key Club, compiled by District Secretary Farwa Shakeel!</p>
+            </li>
+
+            <li>
                 <h3><a href="/downloads/district-resources/for-everyone/NJ District Bylaws.docx">NJ District Bylaws (DOCX)</a></h3>
                 <p>Here are the New Jersey District of Key Club Bylaws.</p>
             </li>
@@ -151,7 +156,7 @@ class: district-resources
 
             <li>
                 <h3><a href="/downloads/district-resources/for-ltgs/Club Meeting Evaluation Form.pdf">Club Meeting Evaluation Form (PDF)</a></h3>
-                <p>All Lieutenant Governors are required to send this form within 15 days of a club visit.</p>
+                <p>All Lieutenant Governors are required to send this form within 10 days of a club visit.</p>
             </li>
 
             <li>
