Add fall rally board meeting summary

--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -43,6 +43,11 @@ class: district-resources
             </li>
 
             <li>
+                <h3><a href="/downloads/district-resources/for-everyone/2015 Fall Rally Board Meeting Summary.pdf">2015 Fall Rally Board Summary</a></h3>
+                <p>Here is a summary of what the District Board discussed at the Fall Rally Board Meeting in October 2015, written by Secretary Farwa Shakeel.</p>
+            </li>
+
+            <li>
                 <h3><a href="/downloads/district-resources/for-everyone/2015 August Board Meeting Summary.pdf">2015 August Board Summary</a></h3>
                 <p>Here is a summary of what the District Board discussed at the August Board Meeting in August 2015, written by Secretary Farwa Shakeel.</p>
             </li>
