Start DCON page, add board roster, nov board summary, gov/sec blog posts, dec district mailing

--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -33,6 +33,11 @@ class: district-resources
             </li>-->
 
             <li>
+                <h3><a href="/downloads/district-resources/for-everyone/2015 November Board Meeting Summary.pdf">2015 November Board Summary</a></h3>
+                <p>Here is a summary of what the District Board discussed at the November Board Meeting in mid-November 2015, written by Secretary Farwa Shakeel.</p>
+            </li>
+
+            <li>
                 <h3><a href="//issuu.com/njkeyclub/docs/15-16_district_handbook_3e4e437c5fd9ad">NJ District Handbook (Issuu)</a></h3>
                 <p>Here is the official handbook to the New Jersey District of Key Club, compiled by District Secretary Farwa Shakeel!</p>
             </li>
@@ -322,6 +327,11 @@ class: district-resources
             <li>
                 <h3><a href="/downloads/district-resources/district-mailings/2015 Back-to-School District Mailing.zip">2015 Back-to-School District Mailing (ZIP)</a></h3>
             </li>
+
+            <li>
+                <h3><a href="https://drive.google.com/folderview?id=0Bwri5IsO8xpmQkRES1c5cG9jU3c&usp=sharing">2015 December District Mailing (ZIP)</a></h3>
+            </li>
+
         </ul>
     </dd>
 </dl>
