--- a/website/resources/club-websites/index.html
+++ b/website/resources/club-websites/index.html
@@ -85,7 +85,7 @@ title: Club Websites
 <p><a href="http://millburnkeyclub.tumblr.com/">Millburn High School</a></p>
 <p><a href="http://www1.eboard.com/eboard/servlet/BoardServlet?ACTION=BOARD_SHOW&SITE_NAME=mondonhs&BOARD_NAME=KeyClub2&SESSION_ID=a0zdhdorjrtc4967">Monsignor Donovan</a></p>
 <p><a href="http://www.montvillekeyclub.org/">Montville High School</a></p>
-<p><a href="http://mcstkeyclub.weebly.com/">Morris County School of Technology</a></p>
+<p><a href="http://mcstkeyclub.github.io/">Morris County School of Technology</a></p>
 <p><a href="http://www.mkkeyclub.moonfruit.com/">Morris Knolls High School</a></p>
 
 <h3 id="N">N</h3>
