Update board page, add jan board summary

--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -33,6 +33,11 @@ class: district-resources
             </li>-->
 
             <li>
+                <h3><a href="/downloads/district-resources/for-everyone/2016 January Board Meeting Summary.pdf">2016 January Board Summary</a></h3>
+                <p>Here is a summary of what the District Board discussed at the January Board Meeting in early January 2016, written by Secretary Farwa Shakeel.</p>
+            </li>
+
+            <li>
                 <h3><a href="/downloads/district-resources/for-everyone/2015 November Board Meeting Summary.pdf">2015 November Board Summary</a></h3>
                 <p>Here is a summary of what the District Board discussed at the November Board Meeting in mid-November 2015, written by Secretary Farwa Shakeel.</p>
             </li>
