Add elections and scholarship packet

--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -15,22 +15,22 @@ class: district-resources
             <!--<li>
                 <h3><a href="/downloads/district-resources/for-everyone/Contests Packet 2014-15.pdf">Contests Packet 2014-15 (PDF)</a></h3>
                 <p>Compete with other clubs by participating in this service year's contests!</p>
-            </li>
+            </li>-->
 
             <li>
-                <h3><a href="/downloads/district-resources/for-everyone/2015-16 Elections and Campaigning Packet.pdf">2015-16 Elections and Campaigning Packet (PDF)</a></h3>
+                <h3><a href="/downloads/district-resources/for-everyone/2016-17 Elections and Campaigning Packet.pdf">2016-17 Elections and Campaigning Packet (PDF)</a></h3>
                 <p>Running for a district board position this year? Check out the elections packet by clicking the link above!</p>
-            </li>-
-
+            </li>
+            <!--
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/2014-2015 Key Club Annual Achievement Report Form.pdf">2014-2015 Key Club Annual Achievement Report Form (PDF)</a></h3>
                 <p>Please fill out and complete this report prior to District Convention! This is an opportunity to highlight your club's achievements this year.</p>
-            </li>
+            </li>-->
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/Scholarships Packet.pdf">Scholarships Packet (PDF)</a></h3>
-                <p>Are you a graduating senior this year? If so, check out this scholarships packet compiled by our very own <a href="/board/farwa.html">Farwa Shakeel</a>!</p>
-            </li>-->
+                <p>Are you a graduating senior this year? If so, check out this scholarships packet compiled by our very own <a href="/board/ciara.html">Ciara Clarkin</a>!</p>
+            </li>
 
             <li>
                 <h3><a href="/downloads/district-resources/for-everyone/2016 January Board Meeting Summary.pdf">2016 January Board Summary</a></h3>
