--- a/dcon/index.html
+++ b/dcon/index.html
@@ -1,40 +1,81 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Interactive Agent Platform | NJ DCON 2016</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="js/typed.js"></script>
-	<script type="text/javascript">
-		$(function(){
-	      $("header h1").typed({
-	        strings: ["New Jersey District Convention 2016"],
-	        typeSpeed: 10
-	      });
-	  	});
-	  	setTimeout(function(){
-	      $("header h2").typed({
-	        strings: ["Welcome to the Interactive Agent Platform"],
-	        typeSpeed: 10
-	      });
-	  	}, 1000);
-	  	setTimeout(function(){
-	      $("header h3").typed({
-	        strings: ["April 1st - April 3rd, 2016"],
-	        typeSpeed: 10
-	      });
-	  	}, 2000);
-	</script>
+---
+layout: default
+title: Agent Portal
+class: home
+---
+
+<script>
+$(window).load(function() {
+	$(".scroll-arrow").animate({"bottom": "+=110px", "opacity": "+=0.8"}, 500);
+	$(".scroll-arrow a").click(function(event){
+		event.preventDefault();
+	});
+	$("header h1").typed({
+		strings: ["Dear Agent of Service,<br>You have been invited to attend", "The 70th Annual New Jersey Key Club District Convention:<br>License to Serve"],
+		typeSpeed: 5
+	});
+	setTimeout(function() {$("header h2").typed({
+		strings: ["April 1st - 3rd, 2016<br>Ocean Place Resort, Long Branch, NJ"],
+		typeSpeed: 0
+	})}, 6000);
+});
+$("body").scroll(function() {
+	$(".scroll-arrow").fadeOut(500);
+});
+</script>
+
+
+<div class="scroll-arrow"><a href="#about"><img src="/img/arrow.png"></a></div>
+
+<header>
+	<div class="content">
+		<h1 class="uppercase expand"></h1>
+		<h2 class="uppercase expand"></h2>
+	</div>
+</header>
+
+<div class="section" id="about">
+
+	<div class="content">
+
+		<h1 class="uppercase expand">What's DCON?</h1>
+		<p>District Convention, or DCON, is an annual gathering of hundreds of Key Clubbers&mdash;from all over the state of New Jersey&mdash;to celebrate the end of a successful service year and the beginning of a new one. In 2016, the secret agent-themed DCON will take place at the <b>Ocean Place Resort</b> in <b>Long Branch, NJ,</b> from <b>Friday, April 1st to Sunday, April 3rd.</b></p>
+
+		<p>Throughout the weekend, agents of service will enter contests, attend workshops, receive recognition for their accomplishments, participate in onsite service projects, and elect the next district executive board. There will also be dances held on Friday and Saturday nights&mdash;and the beach is right next door!</p>
+
+	</div>
 	
-</head>
-<body>
+</div>
 
-	<header>
-		<h1></h1>
-		<h2></h2>
-		<h3></h3>
+<div class="section" id="workshops">
+	
+	<div class="content">
+		<h1 class="uppercase expand">Workshops</h1>
+	</div>
 
-	</header>
+</div>
 
-</body>
-</html>
+<div class="section" id="contests">
+	
+	<div class="content">
+		<h1 class="uppercase expand">Contests</h1>
+	</div>
+
+</div>
+
+<div class="section" id="elections">
+	
+	<div class="content">
+		<h1 class="uppercase expand">Elections</h1>
+	</div>
+
+</div>
+
+<div class="section" id="registration">
+	
+	<div class="content">
+		<h1 class="uppercase expand">How do I register?</h1>
+	</div>
+
+</div>
+
