Add gear and registration pages

--- a/dcon/contests/index.html
+++ b/dcon/contests/index.html
@@ -13,42 +13,184 @@ class: contests
 <div class="section">
 	<div class="content">
 		<h1 class="uppercase expand">Table of Contents</h1>
-		<div class="wrapper">
-			<ul>
-				<li>Chairperson's Welcome</li>
-				<li>Contest Guidelines</li>
-				<li>Early Contests</li>
-				<li>Awards of Appreciation</li>
-				<li>Prejudged Contests</li>
-				<li>Contests at DCON</li>
-			</ul>
-		</div>
+		<ul class="table-of-contents">
+			<li><a href="#contests-welcome">Chairperson's Welcome</a></li>
+			<li><a href="#contests-guidelines">Contest Guidelines</a></li>
+			<li><a href="#contests-early">Early Contests</a></li>
+			<li><a href="#contests-appreciation">Awards of Appreciation</a></li>
+			<li><a href="#contests-prejudged">Prejudged Contests</a></li>
+			<li><a href="#contests-at-dcon">Contests at DCON</a></li>
+		</ul>
 	</div>
 </div>
 
 <div class="section">
 
 	<div class="content">
+			<h1 class="uppercase expand">Contests Packet PDF</h1>
+			<div class="button uppercase expand"><a href="/downloads/DCON-Contests-Packet.pdf" download><i class="fa fa-download"></i> Download</a></div>
+	</div>
 
-		<h1 class="uppercase expand">A Message From <br>Contests Chairperson<br>Stephania Gonzalez</h1>
+<div class="section" id="contests-welcome">
 
-		<p>Are you ready to get your license to serve at DCON 2016? As Contests Committee Chairperson, I am proud to present you with the 2015-2016 Contests Packet. Although it may seem intimidating at first, I assure you that it is not a lengthy read. Simply look through the Table of Contents for the contests you and your club are interested in and be sure to read the next few pages for the General Guidelines. Good luck to all!</p>
+	<div class="content">
 
-		<p>Competing in contest s are great opportunities for any club to  gain recognition on a state  –or even international level—for its wonderful achievement s in service, fundraising, and creativity. In addition, individual Key Club members can enter various contests to showcase their leadership and dedication to this organization such as the oratorical speech or impromptu essay contest. With over twenty contests in total, there is a contest that suits everyone. So please take the initiative and apply for at least one contest!  Not only will you gain valuable experience, it will make your overall DCON 2016 experience better!</p> 
+		<h1 class="uppercase expand">Chairperson's Welcome</h1>
 
-		<p>In this packet is a general description of all events, requirements, rules, regulations and deadlines for submissions. There are different submission requirements and deadlines for each of the events so please read   carefully! Some contests such as the District Project Award do not require an entry form but do have an early deadline for monetary submission. Other contests such as the Dominico Gatti Faculty Advisor Award have several parts in the submission packet. Members wishing to participate in the oratorical, talent, and impromptu essay contests should register at DCON but come prepared with the necessary materials.</p>
+		<p>Are you ready to get your license to serve at DCON 2016? As Contests Committee Chairperson, I am proud to present you with the 2015-2016 Contests Packet. Although it may seem intimidating at first, I assure you that it is not a lengthy read. Simply look through the Table of Contents for the contests you and your club are interested in and be sure to read the General Guidelines. Good luck to all!</p>
 
-		<p>The Table of Contents has been divided up in order to divide each set of contests up by deadlines. For a complete list, you can also check out the Contests Calendar on Page 6. The Early Contests which do not require any application form have individual deadlines for monetary submission very early in the Service Year. Next on the calendar are the nominations for the Awards of Appreciation. These are due on February 26th at the residence of Zone Administrator Mrs. Helene Miesner (see Page 5). The deadline that follows is March 7th for the Prejudged Contests. Lastly, many contests are due on the Friday night of DCON on April 1st. Lastly, please remember that all deadlines are dates by which all materials must be <i>received</i>, not postmarked.</p>
+		<p>Competing in contests are great opportunities for any club to  gain recognition on a state&mdash;or even international level&mdash;for its wonderful achievements in service, fundraising, and creativity. In addition, individual Key Club members can enter various contests to showcase their leadership and dedication to this organization such as the oratorical speech or impromptu essay contest. With over twenty contests in total, there is a contest that suits everyone. So please take the initiative and apply for at least one contest!  Not only will you gain valuable experience, it will make your overall DCON 2016 experience better!</p> 
 
-		<p>Yours in caring and service,<br>
+		<p>In the Contests Packet is a general description of all events, requirements, rules, regulations and deadlines for submissions. There are different submission requirements and deadlines for each of the events so please read   carefully! Some contests such as the District Project Award do not require an entry form but do have an early deadline for monetary submission. Other contests such as the Dominico Gatti Faculty Advisor Award have several parts in the submission packet. Members wishing to participate in the oratorical, talent, and impromptu essay contests should register at DCON but come prepared with the necessary materials.</p>
+
+		<p>The Table of Contents has been divided up in order to divide each set of contests up by deadlines. For a complete list, you can also check out the Contests Calendar on Page 6 of the Contests Packet. The Early Contests which do not require any application form have individual deadlines for monetary submission very early in the Service Year. Next on the calendar are the nominations for the Awards of Appreciation. These are due on February 26th at the residence of Zone Administrator Mrs. Helene Miesner (see Page 5 of the Contests Packet). The deadline that follows is March 7th for the Prejudged Contests. Lastly, many contests are due on the Friday night of DCON on April 1st. Lastly, please remember that all deadlines are dates by which all materials must be <i>received</i>, not postmarked.</p>
+
+		<center><p>Yours In Caring and Service,<br>
 		Stephania Gonzalez Mena<br>
 		Contests Special Committee Chairperson<br>
-		ltg14.Gonzalez@gmail.com</p>
-
-		<div class="button uppercase expand"><a href="/downloads/DCON-Contests-Packet.pdf">Contests Packet</a></div>
+		ltg14.Gonzalez@gmail.com</p></center>
 
 	</div>
 	
 </div>
+
+<div class="section" id="contests-guidelines">
+
+	<div class="content">
+
+		<h1 class="uppercase expand">Contest Guidelines</h1>
+
+		<p>The following includes general information that pertains to all contests. For more information or if you have any questions, please refer to your Key Club Guidebook, the rest of the packet, the NJ Key Club website, or contact Contests Chairperson Stephania Gonzalez Mena at <a href="mailto:dcon2016contests@gmail.com">dcon2016contests@gmail.com</a> or (908)-977-3049.</p>
+		<ul>
+			<li>All clubs (attending DCON or not) must complete an Annual Achievement Report Form and have it received no later than March 7th at the residence of Zone Administrator Mrs. Helene Miesner. In addition, a copy must be given to your respective Lt. Governor. If you are not attending Convention, it must still be submitted. A copy of this year’s report form is included in the November District Mailing, and can be given to you by your respective Lt. Governor. Failure to submit the Annual Achievement Report Form by Friday of DCON will result in disqualification from all other contests.</li>
+			<li>All contest entries that are not prejudged must be handed in upon your club’s arrival at District Convention. These entries must be submitted no later than 5:00 pm on Friday, April 1st , 2016. Please note that no late entries will be accepted!</li>
+			<li>Key Club International instructions and rules should be followed for the Single Service, Major Emphasis, Oratorical, and Achievement Contests. All entry forms and explanations of these contests are in the Contests Packet, the 2015-2016 Guidebook, and on the Key Club International Website (www.keyclub.org).</li>
+			<li>All information on all the contests should be typed or neatly hand written. Make sure you obtain all required signatures and get them sent in time or the entry will be disqualified.</li>
+			<li>We encourage you to enter as many contests as possible. Although they may differ, the applicant pool for every contest is small when compared to the number of clubs in the District. In fact, contests are one of the most underutilized resources available to all clubs! Therefore, everyone has a chance at winning. Your chances of winning increase just by participating!</li>
+			<li>All deadlines are the RECEIVED date, NOT the postmark date.</li>
+			<li>Winning entries become the property of Key Club International and will not be returned. Key Club International reserves the right to reproduce winning entries for any use deemed appropriate by Key Club International. Appropriate recognition will be provided to the winning Key Club.</li>
+		</ul>
+		<p>All contests, Awards of Appreciation Nominations, and Annual Achievement Report Form should be sent to: <br>
+		<center>Mrs. Helene Meisner<br>166 Oaklyn Road<br>Phillipsburg, NJ 08865<br>meissnerh@norwescap.org<br>
+		cc: DCON2016contests@gmail.com</center></p>
+	</div>
+	
+</div>
+
+<div class="section" id="contests-early">
+	<div class="content">
+		<h1 class="uppercase expand">Early Contests</h1>
+
+		<p><b>District Project Fundraising Award</b>
+		<br><i>Due February 16th, 2016 and at DCON</i>
+		<br>For this contest, no entry form is required. This award recognizes two clubs that have made the largest donation to the NJ District Project, The NJ Federation of Food Banks. Please mail checks to:
+			<center>COO Kiwanis International Foundation<br>3636 Woodview Terrace<br>Indianapolis, Indiana 46268</center></p>
+
+		<p><b>Distinguished Officer Award</b>
+		<br>This award is awarded to all club officers who have exceeded expectations throughout the service year, according to the Distinguished Officer criteria. The decision is made by the Lt. Governor of your respective Division. For more information, please feel free to contact your LTG or Saturday Morning Awards Chair Sarah Remig at <a href="mailto:ltg8.remig@gmail.com">ltg8.remig@gmail.com</a>.</p>
+
+		<p><b>Big 10 Award</b>
+		<br>No entry form is required for this award. This award honors clubs who have increased in membership by ten percent. Reminder to make sure your dues and online roster are up to date and correct so that you can be considered for this award!</p>
+
+		<p><b>Early Bird Dues Award</b>
+		<br>No entry form is required for this award. It is awarded to all clubs who paid dues by November 1st, 2015.</p>
+
+		<p><b>100% CMRF Award</b>
+		<br>No entry form is required for this award. It is awarded to clubs (and their secretaries) who have handed in the Club Monthly Report Form consistently and on time each month.</p>
+
+	</div>
+</div>
+
+<div class="section" id="contests-appreciation">
+	<div class="content">
+		<h1 class="uppercase expand">Awards of Appreciation</h1>
+		<p><b>Dr. Andrew Batsis Outstanding Kiwanis Club Sponsorship Award</b>
+		<br><i>Due February 26</i>
+		<br>This award is presented by the NJ District of Kiwanis International to the Kiwanis Club that the judges feel has gone above and beyond in the sponsorship of an individual Key Club. The only way a Kiwanis Club can be recognized for this award is from nomination by an individual Key Club.</p>
+
+		<p><b>Robert J. Mascenik Outstanding Kiwanis Advisor Award</b>
+		<br><i>Due February 26</i>
+		<br>The NJ District Key Club Outstanding Kiwanis Advisor Award recognizes a distinguished Kiwanis Advisor who has gone above and beyond his/her responsibilities in serving Key Club and youth in general. One Kiwanis Advisor is honored each year.</p>
+
+		<p><b>Dominico Gatti Outstanding Faculty Advisor Award</b>
+		<br><i>Due February 26</i>
+		<br>This award is given to a distinguished Faculty Advisor who has gone above and beyond his/her responsibilities in serving Key Club and youth in general. One Faculty Advisor is honored each year. A narrative of how your Kiwanis Club interacts with your Key Club.</p>
+	</div>
+</div>
+
+<div class="section" id="contests-prejudged">
+	<div class="content">
+		<h1 class="uppercase expand">Prejudged Contests</h1>
+
+		<p><b>Club Website Award</b>
+		<br><i>Due Due March 7th</i>
+		<br>This award honors the Key Club and its Webmaster. The website is judged based on layout, content, photos, Key Club logos, font size, general attractiveness, and loading speed of the site. To enter, please fill out the entry form on page 12 of the Contests Packet.</p>
+
+		<p><b>Single Service Award</b> 
+		<br><i>Due Due March 7th</i>
+		<br>This award recognizes individual Key Clubs for their single best project. A qualifying project will be defined as a club service project, planned, organized and produced by the Key Club occurring on a single day, consecutive days or recurring on different days. Projects acceptable for this award may include both hands-on service projects and fundraising efforts. There are three categories for this award. Platinum has 86 or more members, gold has 61 to 85, silver has 36 to 60, and bronze has 35 or less. Criteria for judging include: Service need, Project plan, Project implementation, final results, public awareness, and members' participation. To enter this award, please fill out the form on page 13 of the Contests Packet and submit it with a complete report.</p>
+
+		<p><b>Club Bulletin Award</b> 
+		<br><i>Due Due March 7th</i>
+		<br>This award recognizes Key Club editors. It recognizes the THREE best NJ Key Club newsletters.            A minimum of 8 issues should be submitted in a 3 ring binder. The entry form on page 14 of the Contests Packet must be included in the binder.</p>
+
+		<p><b>Kiwanis Family Relations Award</b>
+		<br><i>Due Due March 7th</i>
+		<br>This award is for clubs with the best Kiwanis Family Relations. Please complete the form on page 15 of the Contests Packet along with descriptions of the joint projects that are mentioned on the form. If there are multiple projects or multiple K Family Clubs, feel free to photo copy the form, or download it from the NJ Key Club Web Site to submit more. There are 1st , 2nd , and 3rd places for this award.</p>
+
+		<p><b>Major Emphasis Program Award</b> 
+		<br><i>Due Due March 7th</i>
+		<br>This award is given to the Key Club with the best Major Emphasis Project. This year’s theme has been continued to Live 2 Learn. There will be first, second and third place awards given. Please complete the form on page 16 of the packet.</p>
+
+		<p><b>Club Achievement Award</b> 
+		<br><i>Due Due March 7th</i>
+		<br>This award recognizes the most outstanding clubs based on overall service leadership as specified by their Annual Achievement RF. If you are attending DCON, failure to submit this form on time will result in disqualification from all other contests. Annual Achievement RFs were sent out as a part of the November District Mailing and can be found online at njkeyclub.org. Clubs will be categorized based on membership. Platinum is 86 or more members, gold is 62 to 85 members, silver is 36 to 60 members, and bronze is 35 or members or less.</p>
+
+	</div>
+</div>
+
+<div class="section" id="contests-at-dcon">
+	<div class="content">
+		<h1 class="uppercase expand">Contests at DCON</h1>
+		<p><b>Best Club T-Shirt Design (NEW!)</b>
+
+			<br><i>Due April 1st</i>
+			<br>The Club Bulletin Award recognizes the best club T-Shirt Design  in the NJ District.  Clubs must bring TWO identical t-shirts to be judged at District Convention. upon arrival. Be Creative  and stand out!</p>
+
+			<p><b>Traditional Scrapbook Contest</b> 
+			<br><i>Due April 1st</i>
+			<br>For this award, clubs design a traditional scrapbook of their Key Club service year. Each scrapbook must have a cost sheet with signatures and the club information sheet attached to the inside cover. First, second, and third places will be awarded. The rules are on page 19 of the Contests Packet and need to be followed. If they are not followed, the scrapbook will be disqualified.</p>   
+
+			<p><b>Non-Traditional Scrapbook Contest</b> 
+			<br><i>Due April 1st</i>
+			<br>For this award, clubs design a non-traditional scrapbook of the Key Club service year. Each scrapbook must have a cost sheet with signatures and the club information sheet attached to the inside cover. First, second, and third places will be awarded. Rules are on page 19 of the Contests Packet and need to be followed. If they are not followed, the scrapbook will be disqualified.</p> 
+	
+			<p><b>Digital Poster Contest</b> 
+			<br><i>Due April 1st</i>
+			<br>Create a poster on the computer to recruit new Key Club members. It will be judged based on appearance and effectiveness of message. The poster should be printed out and no larger than17” by 22” and no more than1/8”thick. It should not bear the name of any school, community, or district. Please fill out the entry form on page 21 of the Contests Packet and include it with your entry.</p> 
+
+			<p><b>Drawn Poster Contest</b>
+			<br><i>Due April 1st</i>
+			<br>Create a non-digital poster to recruit new Key Club members. It will be judged based on appearance and effectiveness of message. The poster should be no larger than 17” by 22”and no more than 1/8” thick. It should not bear the name of any school, community, or district. Please fill out the entry form on page 22 of the Contests Packet and include it with your entry.</p>   
+
+			<p><b>Video Contest</b> 
+			<br><i>Due April 1st</i>
+			<br>Create a video designed to promote Key Club, your Key Club, or both. It must be 30-60 seconds in length and must be VHS or DVD clip. The entry must be playable on a computer and a DVD player. Please fill out the entry form on page 23 of the Contests Packet and include it with your entry.</p>   
+
+			<p><b>Impromptu Essay Contest</b>
+			<br><i>Due April 1st</i>
+			<br>Any Key Clubber who attends convention is eligible to partake in the essay contest. Key Clubbers who enter will be given 60 minutes to write an essay. The essay will be judged on content, grammatical accuracy, originality, and clarity. The topic for the essay will not be known in advance.</p>   
+
+			<p><b>Oratorical Contest</b> 
+			<br><i>Due April 1st</i>
+			<br>Any Key Clubber who attends convention is eligible to partake in this contest. The presenter is given a maximum of 5 minutes to give a speech on a topic. This contest is judged on clarity, depth, originality, reference, grammar, word choice, posture, voice, and audience attention. The topic is “What does Key Club mean to you?”</p>   
+
+			<p><b>Talent Contest</b>
+			<br><i>Due April 1st</i>
+			<br>Any Key Clubber who attends DCON can showcase his/her talents. Presentations must be in good taste and you must perform alone or in a group of people all from the same club. The talent should be no longer than 6 minutes. It is judged on content, performance, poise, audience response, and personal evaluation. Performers can sign up by filling out the Talent Show form included in the December District Mailing or by contacting your LTG.</p> 
+
+	</div>
+</div>
+
 
 
