--- a/website/resources/district-resources/index.html
+++ b/website/resources/district-resources/index.html
@@ -337,6 +337,10 @@ class: district-resources
                 <h3><a href="https://drive.google.com/folderview?id=0Bwri5IsO8xpmQkRES1c5cG9jU3c&usp=sharing">2015 December District Mailing (ZIP)</a></h3>
             </li>
 
+            <li>
+                <h3><a href="https://drive.google.com/folderview?id=0Bwri5IsO8xpmVHNSY2I2V0FDV1U&usp=sharing">2016 February District Mailing</a></h3>
+            </li>
+
         </ul>
     </dd>
 </dl>
