--- a/website/index.html
+++ b/website/index.html
@@ -3,14 +3,9 @@ layout: home
 title: New Jersey District | Key Club
 home: true
 ---
-<!--<div class="slider">
-    <div>
-        <a href="/events/dcon"><img src="/img/slider/dcon.jpg"></a>
-    </div>
-    <div>
-        <img src="/img/slider/fall-rally.jpg">
-    </div>
-</div>-->
+<div class="dcon-ad">
+	<a href="//dcon.njkeyclub.org/"><h1>(1) new message from NJ Key Club Headquarters</h1></a>
+</div>
 
 <div id="instafeed">
 </div>
